@@ -576,6 +576,7 @@ GTK:
 - Fix const methods display in assert dialog (vinayakgarg).
 - Implement native tab art for wxAUI (Jens Lody and Teodor Petrov).
 - Fix pasting large amounts of text (Bradley Hawkins).
+- Show gstreamer errors if wxMediaCtrl fails to play file.
 
 MSW:
 
